--- a/Upadhyay_Neetika_Notebook.ipynb
+++ b/Upadhyay_Neetika_Notebook.ipynb
@@ -15,7 +15,7 @@
    "id": "ef6f5e6b-2564-411a-a9d1-2d5ccfa48594",
    "metadata": {},
    "source": [
-    "### Introduction\n",
+    "### Introduction-\n",
     "This project is focused on analyzing historical trip data from **Cyclistic**, a fictional bike-share company based in **Chicago**. The project will be fully implemented using **Python and Jupyter Notebook**.\n",
     "### Objective\n",
     "Cyclistic offers a fleet of **5,824** tracked bicycles connected through **692 docking stations** across Chicago. Cyclistic serves two types of users:\n",
